# document-similarity

./: CMakeLists.txt  README.md
docs/: main.tex
documents/: demo1.txt
jaccard-similarity/: main.cpp
src/: main.cpp  mainExperiments.cpp  prova.cpp
src/classes/: Comparator.cpp  Comparator.hpp  Document.cpp  Document.hpp  Experiments.cpp  Experiments.hpp  mainExperiments.cpp
src/jaccard-minhash/: main.cpp
src/jaccard-similarity/: main.cpp
src/minhash-similarity/: main.cpp
src/utils/: utils.cpp  utils.hpp
test/: demo.txt  demo1.txt  doc1.txt  doc12.txt  doc14.txt  doc15.txt  doc2.txt  doc20.txt  doc3.txt  doc5.txt  gen_doc.cpp
test/demo_set/: demo1.txt
test/set1/: doc10.txt  doc11.txt  doc13.txt  doc16.txt  doc17.txt  doc18.txt  doc19.txt  doc4.txt  doc6.txt  doc7.txt  doc8.txt  doc9.txt
test/set2/: doc0.txt  doc1.txt  doc10.txt  doc11.txt  doc12.txt  doc13.txt  doc14.txt  doc15.txt  doc16.txt  doc17.txt  doc18.txt  doc19.txt  doc2.txt  doc20.txt  doc21.txt  doc22.txt  doc23.txt  doc24.txt  doc25.txt  doc26.txt  doc27.txt  doc28.txt  doc29.txt  doc3.txt  doc30.txt  doc31.txt  doc32.txt  doc33.txt  doc34.txt  doc35.txt  doc36.txt  doc37.txt  doc38.txt  doc39.txt  doc4.txt  doc40.txt  doc41.txt  doc42.txt  doc43.txt  doc44.txt  (+10 more)
test/set3/: doc0.txt  doc1.txt  doc10.txt  doc11.txt  doc12.txt  doc13.txt  doc14.txt  doc15.txt  doc16.txt  doc17.txt  doc18.txt  doc19.txt  doc2.txt  doc20.txt  doc21.txt  doc22.txt  doc23.txt  doc24.txt  doc25.txt  doc26.txt  doc27.txt  doc28.txt  doc29.txt  doc3.txt  doc4.txt  doc5.txt  doc6.txt  doc7.txt  doc8.txt  doc9.txt
test/set4/: base.txt  base.txt~  modif1.txt  modif1.txt~  modif10.txt  modif2.txt  modif3.txt  modif4.txt  modif5.txt  modif6.txt  modif7.txt  modif8.txt  modif9.txt
test/set5/: doc0.txt  doc1.txt  doc10.txt  doc11.txt  (+46 more)
(+20 files in other folders)
